--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">HighScores</string>
+    <string name="header_games">Your Games</string>
+    <string name="button_games">See All Games</string>
+    <string name="header_scores">Recent Scores</string>
 </resources>
