lots of progress

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,12 +7,17 @@
     <string name="button_save">Save</string>
     <string name="button_delete">Delete</string>
     <string name="field_name">Name</string>
+    <string name="field_notes">Notes</string>
     <string name="field_score">Score</string>
     <string name="header_games">Your Games</string>
-    <string name="header_scores">Recent Scores</string>
+    <string name="header_scores">Scores</string>
+    <string name="header_other">Other</string>
+    <string name="header_recent_matches">Recent Matches</string>
     <string name="header_new_game">New Game</string>
     <string name="text_empty_games">No games to display</string>
-    <string name="text_empty_scores">No scores to display</string>
+    <string name="text_empty_matches">No matches to display</string>
+    <string name="text_empty_scores">Add your matches\' scores here</string>
+    <string name="text_edit_match">Edit Match</string>
     <string name="toast_game_created">Game Created</string>
     <string name="toast_game_updated">Game Updated</string>
     <string name="toast_game_deleted">Game Deleted</string>
