many things done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,14 +6,18 @@
     <string name="button_new">New</string>
     <string name="button_save">Save</string>
     <string name="button_delete">Delete</string>
+    <string name="exc_no_game_with_id">No game found with id %s</string>
     <string name="field_name">Name</string>
     <string name="field_notes">Notes</string>
     <string name="field_score">Score</string>
+    <string name="header_details">Game Details</string>
     <string name="header_games">Your Games</string>
-    <string name="header_scores">Scores</string>
+    <string name="header_matches">Matches</string>
+    <string name="header_new_game">New Game</string>
     <string name="header_other">Other</string>
     <string name="header_recent_matches">Recent Matches</string>
-    <string name="header_new_game">New Game</string>
+    <string name="header_scores">Scores</string>
+    <string name="header_theme">Custom Theme</string>
     <string name="text_empty_games">No games to display</string>
     <string name="text_empty_matches">No matches to display</string>
     <string name="text_empty_scores">Add your matches\' scores here</string>
