--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="toast_game_created">Game Created</string>
     <string name="toast_game_updated">Game Updated</string>
     <string name="toast_game_deleted">Game Deleted</string>
-    <string name="toast_score_created">Score Created</string>
-    <string name="toast_score_updated">Score Updated</string>
-    <string name="toast_score_deleted">Score Deleted</string>
+    <string name="toast_match_created">Match Created</string>
+    <string name="toast_match_updated">Match Updated</string>
+    <string name="toast_match_deleted">Match Deleted</string>
 </resources>
