--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="ad_indicator">Ad</string>
-    <string name="app_name">Scorekeeper</string>
+    <string name="ad_no_advertiser">Unknown Advertiser</string>
     <string name="button_edit">Edit</string>
     <string name="button_games">See All Games</string>
     <string name="button_add_new_game">Add New Game</string>
