--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,52 +1,116 @@
 <resources>
+
+    <!-- region Ads -->
+
     <string name="ad_indicator">Ad</string>
     <string name="ad_no_advertiser">Unknown Advertiser</string>
-    <string name="button_edit">Edit</string>
-    <string name="button_games">See All Games</string>
-    <string name="button_add_new_game">Add New Game</string>
-    <string name="button_new">New</string>
-    <string name="button_save">Save</string>
-    <string name="button_delete">Delete</string>
-    <string name="exc_no_game_with_id">No game found with id %s</string>
-    <string name="field_name">Name</string>
-    <string name="field_notes">Notes</string>
-    <string name="field_score">Score</string>
-    <string name="header_details">Game Details</string>
-    <string name="header_games">Your Games</string>
-    <string name="header_matches">Matches</string>
-    <string name="header_new_game">New Game</string>
-    <string name="header_other">Other</string>
-    <string name="header_recent_matches">Recent Matches</string>
-    <string name="header_scores">Scores</string>
-    <string name="header_sort_menu">Sort by...</string>
-    <string name="header_theme">Custom Theme</string>
-    <string name="learn_more_cta">Learn More</string>
-    <string name="text_empty_games">No games to display</string>
-    <string name="text_empty_match_scores">No Players Added</string>
-    <string name="text_empty_matches">No matches to display</string>
-    <string name="text_empty_scores">Add your matches\' scores here</string>
-    <string name="text_empty_match_search_results">No matches found containing \"%s\"</string>
-    <string name="text_empty_game_search_results">No games found containing \"%s\"</string>
-    <string name="text_showing_search_results">Searching for \"%s\"</string>
-    <string name="text_no_name">No Name</string>
-    <string name="text_edit_match">Edit Match</string>
-    <string name="toast_game_created">Game Created</string>
-    <string name="toast_game_updated">Game Updated</string>
-    <string name="toast_game_deleted">Game Deleted</string>
-    <string name="toast_match_created">Match Created</string>
-    <string name="toast_match_updated">Match Updated</string>
-    <string name="toast_match_deleted">Match Deleted</string>
-    <string name="search_placeholder_match">Search matches</string>
 
-    <!-- region Scoring Mode Options -->
-    <string name="scoring_option_ascending">Lowest Score Wins</string>
-    <string name="scoring_option_descending">Highest Score Wins</string>
     <!-- endregion -->
 
-    <!-- region Sorting Menu Options -->
+    <!-- region Common -->
+
+    <string name="header_games">Your Games</string>
+    <string name="text_empty_games">No games to display</string>
+    <string name="text_empty_matches">No matches to display</string>
+    <string name="text_showing_search_results">Searching for \"%s\"</string>
+
+    <!-- endregion -->
+
+    <!-- region DB Entity Defaults -->
+
+    <string name="default_new_game_name">New Game</string>
+    <string name="default_new_player_name">New Player</string>
+
+    <!-- endregion -->
+
+    <!-- region Exceptions -->
+
+    <string name="exc_no_game_with_id">No game found with id %s</string>
+
+    <!-- endregion -->
+
+    <!-- region Toast -->
+
+    <string name="toast_game_deleted">Game Deleted</string>
+    <string name="toast_game_updated">Game Updated</string>
+    <string name="toast_match_deleted">Match Deleted</string>
+    <string name="toast_match_updated">Match Updated</string>
+
+    <!-- endregion -->
+
+    <!-- region DetailedPlayerScoresScreen -->
+
+    <string name="header_simple_scores">Simple Scores</string>
+
+    <!-- endregion -->
+
+    <!-- region EditGameScreen -->
+
+    <string name="field_categories">Scoring Categories</string>
+    <string name="field_edit_category">Edit Category</string>
+    <string name="field_new_category">New Category</string>
+    <string name="header_details">Game Details</string>
+    <string name="header_theme">Custom Theme</string>
+    <string name="scoring_option_ascending">Lowest Score Wins</string>
+    <string name="scoring_option_descending">Highest Score Wins</string>
+    <string name ="text_no_scoring_categories">No scoring categories added.</string>
+
+    <!-- endregion -->
+
+    <!-- region EditPlayerScoreScreen -->
+
+    <string name="error_invalid_score">This is not a valid number.</string>
+    <string name="field_detailed_view">Detailed Score</string>
+    <string name="field_total_score">Total Score</string>
+    <string name="field_uncategorized">Uncategorized</string>
+    <string name="header_player_info">Player Information</string>
+    <string name="header_player_scores">Player Score</string>
+
+    <!-- endregion -->
+
+    <!-- region GamesScreen -->
+
+    <string name="text_empty_game_search_results">No games found containing \"%s\"</string>
+    <string name="text_no_game_name">No Name</string>
+
+    <!-- endregion -->
+
+    <!-- region Overview -->
+
+    <string name="button_add_new_game">Add New Game</string>
+    <string name="button_games">See All Games</string>
+    <string name="header_recent_matches">Recent Matches</string>
+
+    <!-- endregion -->
+
+    <!-- region SingleGameScreen -->
+
+    <string name="header_sort_menu">Sort by…</string>
     <string name="sort_option_age">Date of Match</string>
     <string name="sort_option_name">Winning Player</string>
     <string name="sort_option_score">Winning Score</string>
     <string name="sort_option_players">Player Count</string>
+    <string name="text_empty_match_players">No Players Added</string>
+    <string name="text_empty_match_search_results">No matches found containing \"%s\"</string>
+
+    <!-- endregion -->
+
+    <!-- region SingleMatchScreen -->
+
+    <string name="field_name">Name</string>
+    <string name="field_notes">Notes</string>
+    <string name="header_other">Other</string>
+    <string name="header_players">Players</string>
+    <string name="search_placeholder_match">Search matches</string>
+    <string name="text_empty_players">No players have been added.</string>
+
+    <!-- endregion -->
+
+    <!-- region ScoreStringValidityState descriptions -->
+
+    <string name="validity_state_invalid_number">This is not a valid number.</string>
+    <string name="validity_state_excessive_decimals">Use a maximum of 3 decimal places.</string>
+    <string name="validity_state_no_error">No error.</string>
+
     <!-- endregion -->
 </resources>
