--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,17 +56,23 @@
     <string name="info_categories_section_helper">These are used for advanced tracking in your matches. An example set would be Cities, Farms, and Roads.</string>
     <string name="scoring_option_ascending">Lowest Score Wins</string>
     <string name="scoring_option_descending">Highest Score Wins</string>
+    <string name="scoring_option_manual">Manual Ranking</string>
     <string name ="text_no_scoring_categories">No scoring categories added.</string>
 
     <!-- endregion -->
 
     <!-- region EditPlayerScoreScreen -->
+
+    <string name="error_invalid_rank">This is not a valid rank. Please enter a positive integer less than 101.</string>
     <string name="field_detailed_view">Detailed Mode</string>
+    <string name="field_rank">Rank</string>
     <string name="field_total_score">Total Score</string>
     <string name="field_uncategorized">Uncategorized</string>
     <string name="header_player_info">Player Information</string>
+    <string name="header_player_ranking">Player Ranking</string>
     <string name="header_player_scores">Player Score</string>
     <string name="info_player_score_screen_helper">Enter the player\'s information and score.</string>
+    <string name="info_player_score_screen_rank_helper">Manual ranking is enabled, so also enter the player\'s rank.</string>
     <string name="info_player_score_screen_warning">Detailed mode is on, but no scoring categories have been added. To add some, edit your game.</string>
 
     <!-- endregion -->
