[SCOR-34] Impose Maximum Players

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,6 +106,7 @@
 
     <!-- region SingleMatchScreen -->
 
+    <string name="error_maximum_players_reached">You may only record up to 100 players for a single match.</string>
     <string name="field_name">Name</string>
     <string name="field_notes">Notes</string>
     <string name="header_other">Other</string>
