--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,9 +11,17 @@
 
     <string name="error_empty_name">Please enter a name.</string>
     <string name="header_games">Your Games</string>
+    <string name="header_sort_menu">Sorting Options</string>
+    <string name="header_sort_mode_section">Sort by…</string>
+    <string name="sort_direction_header">Sort direction</string>
+    <string name="sort_direction_ascending">Ascending</string>
+    <string name="sort_direction_descending">Descending</string>
     <string name="text_empty_games">No games to display</string>
     <string name="text_empty_matches">No matches to display</string>
+    <string name="text_matches">Matches</string>
     <string name="text_showing_search_results">Searching for \"%s\"</string>
+    <string name="text_statistics">Stats</string>
+    <string name="text_tied">Tied</string>
 
     <!-- endregion -->
 
@@ -84,23 +92,48 @@
 
     <!-- endregion -->
 
-    <!-- region Overview -->
+    <!-- region GameStatistics -->
 
-    <string name="button_add_new_game">Add New Game</string>
-    <string name="button_games">See All Games</string>
-    <string name="header_recent_matches">Recent Matches</string>
+    <string name="clickable_see_more">See more</string>
+    <string name="header_scoring">Scoring</string>
+    <string name="header_plays">Plays</string>
+    <string name="header_wins">Wins</string>
+    <string name="headline_best_winner">Best Winner</string>
+    <string name="headline_high">High</string>
+    <string name="headline_high_score">High Score</string>
+    <string name="headline_low">Low</string>
+    <string name="headline_matches">Matches</string>
+    <string name="headline_mean">Mean</string>
+    <string name="headline_players">Players</string>
+    <string name="headline_range">Range</string>
+    <string name="headline_top_scorers">Top Scorers</string>
+    <string name="headline_unique_winners">Unique Winners</string>
+    <string name="description_best_winner">The player(s) with the most wins</string>
+    <string name="description_high_score">Highest overall score</string>
+    <string name="description_matches">Total matches recorded</string>
+    <string name="description_players">Total unique players</string>
+    <string name="description_unique_winners">Number of unique players with a win</string>
+    <string name="number_with_wins">%1$d wins</string>
+    <string name="number_list_overflow">…and %1$d more</string>
 
     <!-- endregion -->
 
-    <!-- region SingleGameScreen -->
+    <!-- region MatchesForSingleGameScreen -->
 
-    <string name="header_sort_menu">Sort by…</string>
     <string name="sort_option_age">Date of Match</string>
     <string name="sort_option_name">Winning Player</string>
     <string name="sort_option_score">Winning Score</string>
     <string name="sort_option_players">Player Count</string>
     <string name="text_empty_match_players">No Players Added</string>
     <string name="text_empty_match_search_results">No matches found containing \"%s\"</string>
+
+    <!-- endregion -->
+
+    <!-- region Overview -->
+
+    <string name="button_add_new_game">Add New Game</string>
+    <string name="button_games">See All Games</string>
+    <string name="header_recent_matches">Recent Matches</string>
 
     <!-- endregion -->
 
