[SCOR-*] Large Code and UI/UX Facelift

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,16 +10,15 @@
     <!-- region Common -->
 
     <string name="error_empty_name">Please enter a name.</string>
+    <string name="field_error_empty">This field cannot be empty.</string>
     <string name="header_games">Your Games</string>
     <string name="header_sort_menu">Sorting Options</string>
-    <string name="header_sort_mode_section">Sort by…</string>
-    <string name="sort_direction_header">Sort direction</string>
     <string name="sort_direction_ascending">Ascending</string>
     <string name="sort_direction_descending">Descending</string>
-    <string name="text_empty_games">No games to display</string>
-    <string name="text_empty_matches">No matches to display</string>
+    <string name="text_empty_games">No games to display.</string>
+    <string name="text_empty_matches">No matches to display.</string>
     <string name="text_matches">Matches</string>
-    <string name="text_showing_search_results">Searching for \"%s\"</string>
+    <string name="text_showing_search_results">Searching for \"%s\".</string>
     <string name="text_statistics">Stats</string>
     <string name="text_tied">Tied</string>
 
@@ -58,14 +57,12 @@
     <string name="field_categories">Scoring Categories</string>
     <string name="field_edit_category">Edit Category</string>
     <string name="field_new_category">New Category</string>
-    <string name="header_details">Game Details</string>
-    <string name="header_theme">Custom Theme</string>
-    <string name="info_edit_game_screen_helper">Enter details about your game, and a custom theme color if you wish.</string>
-    <string name="info_categories_section_helper">These are used for advanced tracking in your matches. An example set would be Cities, Farms, and Roads.</string>
+    <string name="header_game_details">Game Details</string>
+    <string name="header_custom_theme">Custom Theme</string>
+    <string name="info_categories_section_helper">If your game has multiple scoring sources, add them here. An example set would be City, Farm, Road, and Monastery.</string>
     <string name="scoring_option_ascending">Lowest Score Wins</string>
     <string name="scoring_option_descending">Highest Score Wins</string>
-    <string name="scoring_option_manual">Manual Ranking</string>
-    <string name ="text_no_scoring_categories">No scoring categories added.</string>
+    <string name="scoring_option_manual">Decide Your Own Ranks</string>
 
     <!-- endregion -->
 
@@ -79,9 +76,8 @@
     <string name="header_player_info">Player Information</string>
     <string name="header_player_ranking">Player Ranking</string>
     <string name="header_player_scores">Player Score</string>
-    <string name="info_player_score_screen_helper">Enter the player\'s information and score.</string>
-    <string name="info_player_score_screen_rank_helper">Manual ranking is enabled, so also enter the player\'s rank.</string>
-    <string name="info_player_score_screen_warning">Detailed mode is on, but no scoring categories have been added. To add some, edit your game.</string>
+    <string name="helper_player_score_screen_rank">Manual ranking is enabled for this game. Enter the player\'s rank here.</string>
+    <string name="helper_player_score_screen_detailed_mode">Detailed mode is on, but no scoring categories have been added. To add some, edit your game.</string>
 
     <!-- endregion -->
 
@@ -94,7 +90,6 @@
 
     <!-- region GameStatistics -->
 
-    <string name="clickable_see_more">See more</string>
     <string name="header_scoring">Scoring</string>
     <string name="header_plays">Plays</string>
     <string name="header_wins">Wins</string>
@@ -106,14 +101,18 @@
     <string name="headline_mean">Mean</string>
     <string name="headline_players">Players</string>
     <string name="headline_range">Range</string>
-    <string name="headline_top_scorers">Top Scorers</string>
+    <string name="headline_top_scores">Top Scores</string>
     <string name="headline_unique_winners">Unique Winners</string>
+    <string name="helper_empty_data">No data has been added.</string>
     <string name="description_best_winner">The player(s) with the most wins</string>
     <string name="description_high_score">Highest overall score</string>
     <string name="description_matches">Total matches recorded</string>
     <string name="description_players">Total unique players</string>
     <string name="description_unique_winners">Number of unique players with a win</string>
-    <string name="number_with_wins">%1$d wins</string>
+    <plurals name="number_with_wins">
+        <item quantity="one">%d win</item>
+        <item quantity="other">%d wins</item>
+    </plurals>
     <string name="number_list_overflow">…and %1$d more</string>
 
     <!-- endregion -->
@@ -125,15 +124,14 @@
     <string name="sort_option_score">Winning Score</string>
     <string name="sort_option_players">Player Count</string>
     <string name="text_empty_match_players">No Players Added</string>
-    <string name="text_empty_match_search_results">No matches found containing \"%s\"</string>
+    <string name="text_empty_match_search_results">No matches found containing \"%s\".</string>
 
     <!-- endregion -->
 
     <!-- region Overview -->
 
-    <string name="button_add_new_game">Add New Game</string>
-    <string name="button_games">See All Games</string>
     <string name="header_recent_matches">Recent Matches</string>
+    <string name="top_bar_header_overview">Overview</string>
 
     <!-- endregion -->
 
@@ -144,10 +142,8 @@
     <string name="field_notes">Notes</string>
     <string name="header_other">Other</string>
     <string name="header_players">Players</string>
-    <string name="info_single_match_screen_helper_1">Good game! Add the players who participated in your</string>
-    <string name="info_single_match_screen_helper_2">match, as well as any miscellaneous notes.</string>
+    <string name="info_empty_players">No players have been added.</string>
     <string name="search_placeholder_match">Search matches</string>
-    <string name="text_empty_players">No players have been added.</string>
     <string name="text_no_detailed_scores">No players have detailed scores. Add some by tapping a player and switching on \"Detailed Score.\"</string>
 
     <!-- endregion -->
