Library Updates & Post 2024.1 Bug Squashing - updated gradle configs drastically, including Kotlin 2.0.0 - migrated plugin and dependency version management to the toml paradigm - FIX: one-character stop bug in matches with 1 category - FIX: bad behavior while searching matches with no results - FIX: screen-height ad when not in a LazyX - FIX: Ads are loading every 10 instead of every 45

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- region Ads -->
 
@@ -102,7 +102,7 @@
         <item quantity="one">%d win</item>
         <item quantity="other">%d wins</item>
     </plurals>
-    <string name="number_list_overflow">…and %1$d more</string>
+    <string name="number_list_overflow" tools:ignore="PluralsCandidate">…and %1$d more</string>
     <string name="no_data_for_category">There is no data recorded for this category</string>
 
     <!-- endregion -->
